--- a/homework-3/homework-3/MVCFirstScreen/View/Base.lproj/Main.storyboard
+++ b/homework-3/homework-3/MVCFirstScreen/View/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Увлечения-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ThirdVC" customModule="homework_3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="View" customModule="homework_3" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
